--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ div {
 .chatbot {
 	width: 100%;
 	height: 100%;
+	border: 0;
 }
 
 #myCanvas{
@@ -22,3 +23,5 @@ body, html, .container, .container-fluid {
 	width: 100%;
 	height: 100%;
 }
+
+
