--- a/style.css
+++ b/style.css
@@ -24,4 +24,11 @@ body, html, .container, .container-fluid {
 	height: 100%;
 }
 
-
+.bluebud {
+	width: 100%;
+	height: 100%;
+	border: 0;
+	position:absolute;
+	bottom:0;
+	
+}
