--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
-h1 {
-	color: aqua;
+h1,h4 {
+	color: #047cc0;
+	width: 100%
+}
+
+h4{
+	color: black;
+}
+
+
+img {
+	height: 80px;
+	width: auto;
+	
+	 display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 div {
